--- a/CLOCK_CHAT/templates/enduser/home/landing.html
+++ b/CLOCK_CHAT/templates/enduser/home/landing.html
@@ -17,8 +17,8 @@
 
   <link rel="stylesheet" href="static/css/Lpage.css">
   <link rel ="stylesheet" href="static/css/login.css">
-  <script src="static/js/login.js"></script>
-  <script src="static/js/sign_up.js"></script>
+  <script src="/static/js/login.js"></script>
+  <script src="/static/js/sign_up.js"></script>
 
   <script>
     window.djangoMessages = [
