want to take pull

--- a/CLOCK_CHAT/templates/status/status view.html
+++ b/CLOCK_CHAT/templates/status/status view.html
@@ -112,7 +112,7 @@
       left: 50%;
       transform: translateX(-50%);
       font-size: 14px;
-      color: #ccc;
+      color: #ccc
       display: flex;
       align-items: center;
       gap: 5px;
