--- a/CLOCK_CHAT/templates/enduser/Chats/chat.html
+++ b/CLOCK_CHAT/templates/enduser/Chats/chat.html
@@ -17,6 +17,8 @@
     
         <script src="/static/js/chat_js.js"></script>
         <script src="/static/js/message.js"></script>
+        <meta name="csrf-token" content="{{ csrf_token }}">
+
     </head>
     
 
@@ -79,19 +81,40 @@
             <span class="close-modal" onclick="close_modal()">&times;</span>
             <h3>Create New Chat</h3>
             <input type="search" id="userSearch" placeholder="Search users...">
-
+            
+            <!-- Selected users display -->
+            <button id="createGroupChatBtn" style="display: none;" onclick="createGroupChat()"><div>Create Group Chat</div></button>
+    
             <div class="modal-options" id="userList">
             {% for user in users %}
-                <div class="modal-option">
-                <div class="option-icon">
-                    <img src="{{ user.profile_pic }}" style="height:100%; border-radius:50%;">
-                </div>
-                <p class="user-name">{{ user.full_name }}</p>
+                <div class="modal-option" data-user-id="{{ user.id }}">
+                    <div class="option-icon">
+                        <img src="{{ user.profile_pic }}" style="height:100%; border-radius:50%;">
+                    </div>
+                    <p class="user-name">{{ user.full_name }}</p>
                 </div>
             {% endfor %}
             </div>
         </div>
     </div>
 
+
+
+    <style>
+        #createGroupChatBtn{
+            right: 5%;
+            bottom: 10%;
+            border-radius: 10px;
+            padding: 15px;
+            display: flex;
+            position: absolute;
+            background: #2a9dff;
+        }
+        .modal-option.selected {
+            background-color: #d0ebff;
+            border: 2px solid #339af0;
+          }
+          
+    </style>
 </body>
 </html>
