--- a/CLOCK_CHAT/templates/enduser/Chats/chat.html
+++ b/CLOCK_CHAT/templates/enduser/Chats/chat.html
@@ -54,8 +54,8 @@
                 <h3 class="chat-title">{{ chat.title }}</h3>
                 </div>
                 <div style="max-width: 100px;gap: 10px;flex-direction: column;display: flex;">
-                <div style="justify-content: flex-end;align-items: center;display: flex;">2+</div>
-                <div style="justify-content: flex-end;align-items: center;display: flex;">{{chat.created_at}}</div>
+                <div style="justify-content: flex-end;align-items: center;display: flex;font-size: 12px;">2+</div>
+                <div style="justify-content: flex-end;align-items: center;display: flex;font-size: 12px;">{{chat.created_at}}</div>
                 </div>
             </div>
             {% endfor %}
