modify the codes and change file

--- a/CLOCK_CHAT/templates/enduser/Chats/chat.html
+++ b/CLOCK_CHAT/templates/enduser/Chats/chat.html
@@ -29,8 +29,11 @@
         <div class="toolbar-icons">
             <span class="toolbar-icon active" data-tooltip="Chats"><i class="fas fa-comment-alt"></i></span>
             <span class="toolbar-icon" data-tooltip="Status" onclick="window.location.href='/status/'"> <i class="fas fa-circle-notch"></i></span>
-            <span class="toolbar-icon" data-tooltip="Out"><i class="fa-solid fa-arrow-right-from-bracket"></i></span>
+        </div>
+        <div class="toolbar-icons">
+            <span class="toolbar-icon" data-tooltip="Logout" onclick="window.location.href='/logout/'"><i class="fa-solid fa-power-off"></i></span>
             <span class="toolbar-icon" data-tooltip="Settings"><i class="fas fa-cog"></i></span>
+            <span class="toolbar-icon" data-tooltip="Profile"><i class="fa-regular fa-user"></i></span>
         </div>
     </div>
 
