--- a/static/css/clock.css
+++ b/static/css/clock.css
@@ -34,6 +34,7 @@ body {
 
 
 .toolbar {
+    height: 100%;
     justify-content: space-between;
     width: 80px;
     background: linear-gradient(to bottom, #1a1a2e, #16213e);
